--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -94,14 +95,15 @@
                 opacity: 0;
                 transform: translateY(-20px);
             }
+
             100% {
                 opacity: 1;
                 transform: translateY(0);
             }
         }
-
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>Kullanıcı Ana Sayfası</h1>
@@ -118,7 +120,7 @@
 
     <script>
         // Sayfa yüklendiğinde kullanıcı bilgilerini ve görevlerini çek
-        window.onload = function() {
+        window.onload = function () {
             function getTokenFromUrl() {
                 const urlParams = new URLSearchParams(window.location.search);
                 return urlParams.get('token');
@@ -134,25 +136,33 @@
 
         // API isteği ile kullanıcı bilgilerini ve görevlerini al
         function fetchUserData(token) {
-            fetch('https://7536-78-177-177-231.ngrok-free.app/user/me', { // API endpoint burada belirtilmeli
+            fetch('https://7536-78-177-177-231.ngrok-free.app/user/me', {
                 method: 'GET',
                 headers: {
-                    'Authorization': 'Bearer ' + token
+                    'Authorization': `Bearer ${token}`,
+                    'Content-Type': 'application/json'
                 }
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data && data.username) {
-                    document.getElementById("usernameDisplay").textContent = "Kullanıcı: " + data.username;
-                    populateTasks(data.tasks);
-                } else {
-                    document.getElementById("usernameDisplay").textContent = "Kullanıcı bilgisi alınamadı.";
-                }
-            })
-            .catch(error => {
-                console.error('Kullanıcı bilgisi çekilirken hata oluştu:', error);
-                document.getElementById("usernameDisplay").textContent = "Bilgi çekilemedi.";
-            });
+            }).then(response => console.log(response)) 
+
+            // fetch('https://7536-78-177-177-231.ngrok-free.app/user/me', { // API endpoint burada belirtilmeli
+            //     method: 'GET',
+            //     headers: {
+            //         'Authorization': 'Bearer ' + token
+            //     }
+            // })
+            //     .then(response => response.json())
+            //     .then(data => {
+            //         if (data && data.username) {
+            //             document.getElementById("usernameDisplay").textContent = "Kullanıcı: " + data.username;
+            //             populateTasks(data.tasks);
+            //         } else {
+            //             document.getElementById("usernameDisplay").textContent = "Kullanıcı bilgisi alınamadı.";
+            //         }
+            //     })
+            //     .catch(error => {
+            //         console.error('Kullanıcı bilgisi çekilirken hata oluştu:', error);
+            //         document.getElementById("usernameDisplay").textContent = "Bilgi çekilemedi.";
+            //     });
         }
 
         // Görevleri sayfada listele
@@ -178,4 +188,5 @@
         }
     </script>
 </body>
+
 </html>
