--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
             </ul>
         </div>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
         // Sayfa yüklendiğinde kullanıcı bilgilerini ve görevlerini çek
         window.onload = function () {
