Refactor app.js to update CORS configuration and include axios library for fetching user data from API

--- a/public/index.html
+++ b/public/index.html
@@ -135,18 +135,20 @@
         }
 
         // API isteği ile kullanıcı bilgilerini ve görevlerini al
-        function fetchUserData(token) {
-            axios.get('https://7536-78-177-177-231.ngrok-free.app/user/me', {
-                headers: {
-                    'Authorization': `Bearer ${token}`,
-                    'Content-Type': 'application/json'
-                }
-            })
-            .then(response => console.log(response))
-            .catch(error => {
-                console.error('Kullanıcı bilgisi çekilirken hata oluştu:', error);
-                document.getElementById("usernameDisplay").textContent = "Bilgi çekilemedi.";
-            });
+        async function fetchUserData(token) {
+            const url = `https://7536-78-177-177-231.ngrok-free.app/user/me`;
+            try {
+                const response = await axios.get(url, {
+                    headers: {
+                        'Authorization': `Bearer ${token}`,
+                        'Content-Type': 'application/json',
+                    },
+                });
+                console.log('Yanıt:', response.data);
+            } catch (error) {
+                console.error('Hata:', error.response ? error.response.data : error.message);
+            }
+        }
             // fetch('https://7536-78-177-177-231.ngrok-free.app/user/me', {
             //     method: 'GET',
             //     headers: {
@@ -174,7 +176,7 @@
             //         console.error('Kullanıcı bilgisi çekilirken hata oluştu:', error);
             //         document.getElementById("usernameDisplay").textContent = "Bilgi çekilemedi.";
             //     });
-        }
+        
 
         // Görevleri sayfada listele
         function populateTasks(tasks) {
